--- a/E-learning-portal/E-learning-portal.csproj
+++ b/E-learning-portal/E-learning-portal.csproj
@@ -217,7 +217,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803101557507_InitialCreate.cs" />
+    <Compile Include="Migrations\201803101557507_InitialCreate.Designer.cs">
+      <DependentUpon>201803101557507_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AppDbInitializer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MyModels\Classbook.cs" />
@@ -289,12 +295,12 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Start\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Classbook\" />
     <Folder Include="Views\Material\" />
-    <Folder Include="Views\Start\" />
     <Folder Include="Views\Student\" />
     <Folder Include="Views\Task\" />
     <Folder Include="Views\Teacher\" />
@@ -306,6 +312,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803101557507_InitialCreate.resx">
+      <DependentUpon>201803101557507_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
