--- a/E-learning-portal/bin/E-learning-portal.dll.config
+++ b/E-learning-portal/bin/E-learning-portal.dll.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ApplicationDbContext" connectionString="Data Source=.\SQLEXPRESS;
-         AttachDbFilename=|DataDirectory|\aspnet-E-learning-portal-20180310023415.mdf;          
-         Initial Catalog=aspnet-E-learning-portal-20180310023415;          
-         Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ApplicationDbContext" connectionString="DataSource=.\SQLEXPRESS; 
+         AttachDbFilename=|DataDirectory|\aspnet-E-learning-portal-20180310023415.mdf;                    
+         InitialCatalog=aspnet-E-learning-portal-20180310023415;                    
+         IntegratedSecurity=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -78,7 +78,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
