--- a/E-learning-portal/packages.config
+++ b/E-learning-portal/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="DevExpress.MVC" version="12.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
@@ -36,6 +37,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
